--- a/index.html
+++ b/index.html
@@ -727,6 +727,10 @@ Error message and password prompt
 
 <li>Roundtable on Trustee's duties</li>
 
+<li>RPG Longsight</li>
+
+<li>RPG Longsight (Foundation CIO)</li>
+
 <li>Sample artist contract</li>
 
 <li>Sample Karaoke Court Arbitration Agreement</li>
@@ -13242,7 +13246,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220607163445674" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220610203316182" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13473,7 +13477,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220608124302934" list="" modified="20220608130342292" title="$:/StoryList">
+<div created="20220610191453775" list="" modified="20220610203310487" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14167,8 +14171,9 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20220513114445926" tags="[[Current and Selected Work]]" title="Current Work">
-<pre>|[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]|[[Sample artist contract]] (Apr 2021) - A model contract that FACT Liverpoool  commissioned me to write for myself and for their future artists.|
+<div created="20220513065347695" modified="20220610193113729" tags="[[Current and Selected Work]]" title="Current Work">
+<pre>|[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]|[[RPG Longsight]] (June 2022 - June 2023) - A yearlong experiment where a new arts organisation in Manchester will deliver its programme via roleplaying 4 forms of governance: a Foundation/Single Tier Charity, an Association/Double Tier Charity, a social enterprise and a non-profit cooperative company|
+|[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]|[[Sample artist contract]] (Apr 2021) - A model contract that FACT Liverpoool  commissioned me to write for myself and for their future artists.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/devising%20governance%20loops.png?raw=true]]|[[Devising Governance]] (June 2021 - Jul 2022) - a year long laboratory at the Scottish Sculpture Workshop (SSW) where new ideas for governance and organisational behaviour will be derived from sculptural processes and tested by the organisation through a framework of performance art.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/FACT-building.jpg?raw=true]]|[[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022) - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I will be exploring ‘Boardness’ itself as artistic medium and as curatorial space.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Dance%20Art%20Foundation%20-%20into_the_mountain_edit_193-1.jpg?raw=true]]|[[Dance Art Foundation Artist Council]] (Sep 2020 - ongoing) - I am part of  of the Dance Art Foundation's artist council who convene to advise, reflect and share knowledge about making, organising, governance, leadership, redistribution and participation in the contemporary dance sector.|
@@ -14331,10 +14336,10 @@ Kirubel’s wealth of experience and contribution in the UK entertainment indust
 
 </pre>
 </div>
-<div created="20210926055217738" modified="20220513065933581" tags="[[Organisational Change]] 2021 Artwork governance [[Current Work]]" title="Devising Governance">
+<div created="20210926055217738" modified="20220610192946442" tags="[[Organisational Change]] 2021 Artwork governance [[Current Work]]" title="Devising Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/devising%20governance%20loops.png?raw=true]]
 
-''June 2021 - July 2022, Scottish Sculpture Workshop''
+''June 2021 - July 2022, Scottish Sculpture Workshop, Aberdeenshire''
 
 ''Devising Governance'' is a year long laboratory at the Scottish Sculpture Workshop (SSW) where new ideas for governance and organisational behaviour will be derived from sculptural processes and tested by the organisation through a framework of performance art.  
 
@@ -15602,6 +15607,68 @@ First half - What are trustees' current duties and liabilities?
 &lt;div&gt;&lt;/div&gt;
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
+</div>
+<div created="20220610192915195" modified="20220610203242861" title="RPG Longsight">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]
+
+''June 2022 - June 2023, Longsight Arts Space, Manchester''
+
+''Role Play Governance Longsight'' is a yearlong participatory artwork that will test how different legal formats will affect executive decision-making, board or director accountability, member/customer/ community engagement and fundability/ survivability. Longsight Art Space will deliver its programme by roleplaying 4 different organisational governance models.
+
+Over the next 12 months, this will culminate in a new co-created organisational model for LAS with its stakeholders and employees via artistic methodologies. Through each quarter LAS will adopt a different legal form: a foundation model (single tier) Charitable Incorporated Organisation (CIO), a Community Interest Company or social enterprise, an association model (two tier) CIO, and finally a Community Benefit Society or Co-op.
+
+​The project will also explore how LAS’ overall mission, vision and values are affected by each organisational form. Eventually, this project will provide the real directors and board of LAS with valuable insight into the advantages and disadvantages of each model of incorporation and inform our decision-making processes going forward.
+
+RPG Longsight will be a form of participatory theatre, durational installation art and social practice with Longsight residents and LAS’ stakeholders invited to participate in the roleplay as directors, trustees, volunteers, members and customers. Depending on their role in each quarter, participants will attend
+and make decisions at AGMs, board meetings, town halls or at directors’ meetings. Each quarter will also manifest in different visual branding, interior design or staging/set to enhance the participatory experience as well as culminating in an exhibition to engage the public and to provoke discussion about
+legal and policy creativity. More details on how to get involved www.proforma.org.uk/opportunities
+
+PROFORMA has commissioned artist Jack Ky Tan to create and facilitate this project together with PROFORMA’s directors Chris Bailkoski and Chi Emecheta. Workshops and participatory sessions will be announced very soon.
+
+Q1 - [[Foundation model/Single Tier Charitable Incorporated Organisation|RPG Longsight (Foundation CIO)]]
+
+Q2 - Association model/Two Tier Charitable Incorporated Organisation
+
+Q3 - Community Interest Company/Social Enterprise
+
+Q4 - Community Benefit Society/Co-op
+
+Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
+</pre>
+</div>
+<div created="20220610193943267" modified="20220610203226113" title="RPG Longsight (Foundation CIO)">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
+
+''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
+&lt;br&gt;''June-Aug 2022''
+
+Longsight Art Space (LAS) launched in April 2022 and since then it has already produced two exhibtiions and a number of public events including a Caribbean Carnival to coincide with the Queen's Jubilee celebrations. Q1 of RPG Longsight will begin with this busy programme already underway and will take the form of a 'Foundation' model Charitable Incorporated Organisation (CIO). This is a single tier charity where its members are the same people as its trustees. Later in Q2, we will roleplay a 2 tier CIO where the trustees and members are different groups of people. 
+
+Q1 will comprise 2 initial meetings with participants roleplaying trustees. The aim of the first meeting will be to draw up LAS' [[Mission, Vision and values|https://www.nonprofitnext.org/sites/default/files/resource_library/mission_vision_values_statements_rf.pdf]]. Then building on this, we will develop LAS' [[Strategic Plan|https://knowhow.ncvo.org.uk/organisation/strategy/options/plan]] in the second meeting. This will culminate in a 3rd meeting which will be the organisation's AGM, where the Board will present the Mission, Vision, Values and Strategic Plan to an invited audience of stakeholders and community members.
+
+The AGM will be the point where we transition the organisation into a 2 tier 'Association' model CIO. Audience members will be invited to formally become the membership of the CIO.
+
+''Dates:''
+
+25th June 12pm-3pm – Defining LAS's Mission, Vision and Values.
+
+16th July 12pm-3pm – Brainstorming and drafting a Strategic Plan
+
+30th July 12pm-3pm – Annual General Meeting
+
+&lt;br&gt;
+
+------
+
+!!!Call for Participants to roleplay Trustees
+
+We are seeking participants for RPG Longsight, a newly commissioned performance and installation work by artist Jack Ky Tan where 4 different organisational models will be tested over a year for the new Longsight Art Space (LAS) in Manchester. Participants will be asked to roleplay as Board Members in the first iteration of LAS as a single tier ‘Foundation’ model Charitable Incorporated Organisation (CIO), i.e., a charity with a Board of Trustees.
+
+You will be invited to attend Board meetings and to play the role of charity trustees who have the responsibility to develop the mission, vision and values of LAS, to strategically direct its work and programme, and to evaluate how LAS is meeting community and stakeholder needs. With you, we will develop the vision, mission and values for Longsight Art Space. You will have the opportunity to input into our creative programme and activities at LAS.
+
+The Q1 roleplay will end in a short exhibition where you and LAS staff, audiences, users and neighbours will be provided space to reflect on what it was like to encounter LAS as a single tier CIO.
+
+[[Download the full Call for Participants here|https://github.com/jackkytan/websiteimages/raw/master/RPG%20Longsight%20-%20Q1%20Participant%20EOI.pdf]]</pre>
 </div>
 <div created="20220208153655156" modified="20220608125839970" tags="[[artist resources]] [[Organisational Change]] [[Current Work]]" title="Sample artist contract">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FACT%20sample%20contract.jpg]]
