--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work-RPG Longsight--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Organisational Practice-Global Ethnic Majorities Board Association--118161433</li>
@@ -13246,7 +13248,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220610203316182" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220610203834277" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13378,10 +13380,13 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220607163441026" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220610203815892" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<pre>open</pre>
+</div>
+<div created="20220513065839196" modified="20220610203750564" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513065839196" modified="20220607163441898" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
+<div created="20220610203817723" modified="20220610203819956" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work-RPG Longsight--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
@@ -13477,7 +13482,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220610191453775" list="" modified="20220610203310487" title="$:/StoryList">
+<div created="20220610203712013" list="Hello [[Current Work]]" modified="20220610203757789" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15608,7 +15613,7 @@ First half - What are trustees' current duties and liabilities?
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
 </div>
-<div created="20220610192915195" modified="20220610203242861" title="RPG Longsight">
+<div created="20220610192915195" modified="20220610203738696" tags="[[Current Work]] [[Selected Work]] governance" title="RPG Longsight">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]
 
 ''June 2022 - June 2023, Longsight Arts Space, Manchester''
@@ -15636,7 +15641,7 @@ Q4 - Community Benefit Society/Co-op
 Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
 </pre>
 </div>
-<div created="20220610193943267" modified="20220610203226113" title="RPG Longsight (Foundation CIO)">
+<div created="20220610193943267" modified="20220610203812447" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
 
 ''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
