--- a/index.html
+++ b/index.html
@@ -13248,7 +13248,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220610203834277" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220610204353266" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13380,8 +13380,8 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220610203815892" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
-<pre>open</pre>
+<div created="20220513080643746" modified="20220610204351466" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<pre>close</pre>
 </div>
 <div created="20220513065839196" modified="20220610203750564" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
@@ -13482,7 +13482,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220610203712013" list="Hello [[Current Work]]" modified="20220610203757789" title="$:/StoryList">
+<div created="20220610203712013" list="" modified="20220610204229106" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15641,13 +15641,13 @@ Q4 - Community Benefit Society/Co-op
 Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
 </pre>
 </div>
-<div created="20220610193943267" modified="20220610203812447" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
+<div created="20220610193943267" modified="20220610204312171" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
 
 ''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
 &lt;br&gt;''June-Aug 2022''
 
-Longsight Art Space (LAS) launched in April 2022 and since then it has already produced two exhibtiions and a number of public events including a Caribbean Carnival to coincide with the Queen's Jubilee celebrations. Q1 of RPG Longsight will begin with this busy programme already underway and will take the form of a 'Foundation' model Charitable Incorporated Organisation (CIO). This is a single tier charity where its members are the same people as its trustees. Later in Q2, we will roleplay a 2 tier CIO where the trustees and members are different groups of people. 
+Longsight Art Space (LAS) launched in April 2022 and since then it has already produced two exhibtions and a number of public events including a Caribbean Carnival to coincide with the Queen's Jubilee celebrations. Q1 of RPG Longsight will begin with this busy programme already underway and will take the form of a 'Foundation' model Charitable Incorporated Organisation (CIO). This is a single tier charity where its members are the same people as its trustees. Later in Q2, we will roleplay a 2 tier CIO where the trustees and members are different groups of people. 
 
 Q1 will comprise 2 initial meetings with participants roleplaying trustees. The aim of the first meeting will be to draw up LAS' [[Mission, Vision and values|https://www.nonprofitnext.org/sites/default/files/resource_library/mission_vision_values_statements_rf.pdf]]. Then building on this, we will develop LAS' [[Strategic Plan|https://knowhow.ncvo.org.uk/organisation/strategy/options/plan]] in the second meeting. This will culminate in a 3rd meeting which will be the organisation's AGM, where the Board will present the Mission, Vision, Values and Strategic Plan to an invited audience of stakeholders and community members.
 
