--- a/index.html
+++ b/index.html
@@ -13482,7 +13482,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220610203712013" list="" modified="20220610204229106" title="$:/StoryList">
+<div created="20220610204538658" list="Hello [[Current Work]]" modified="20220610204538658" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15641,7 +15641,7 @@ Q4 - Community Benefit Society/Co-op
 Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
 </pre>
 </div>
-<div created="20220610193943267" modified="20220610204312171" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
+<div created="20220610193943267" modified="20220610204946640" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
 
 ''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
@@ -15651,7 +15651,9 @@ Longsight Art Space (LAS) launched in April 2022 and since then it has already p
 
 Q1 will comprise 2 initial meetings with participants roleplaying trustees. The aim of the first meeting will be to draw up LAS' [[Mission, Vision and values|https://www.nonprofitnext.org/sites/default/files/resource_library/mission_vision_values_statements_rf.pdf]]. Then building on this, we will develop LAS' [[Strategic Plan|https://knowhow.ncvo.org.uk/organisation/strategy/options/plan]] in the second meeting. This will culminate in a 3rd meeting which will be the organisation's AGM, where the Board will present the Mission, Vision, Values and Strategic Plan to an invited audience of stakeholders and community members.
 
-The AGM will be the point where we transition the organisation into a 2 tier 'Association' model CIO. Audience members will be invited to formally become the membership of the CIO.
+The AGM will also be the point where we transition the organisation into a 2 tier 'Association' model CIO. Audience members will be invited to formally become the membership of the CIO.
+
+Throughout the process of board meetings and AGMs, we will also be considering how to do meetings and decision-making better and how to make them more inclusive and accessible to participants who do not have corporate experience, or who have particular access needs. In particular, we will also be open to adopting different or non-Eurocentric approaches or understandings of accountability, governance and leadership.
 
 ''Dates:''
 
