--- a/index.html
+++ b/index.html
@@ -319,6 +319,12 @@ Error message and password prompt
 
 <li>$:/state/edit/references--198875070</li>
 
+<li>$:/state/folded/Current Work</li>
+
+<li>$:/state/folded/Draft of 'New Tiddler 1'</li>
+
+<li>$:/state/folded/Hello</li>
+
 <li>$:/state/image-picker/system--293728629</li>
 
 <li>$:/state/image-picker/system-1352827474</li>
@@ -800,6 +806,8 @@ Error message and password prompt
 <li>Study</li>
 
 <li>study</li>
+
+<li>Sylvia Wynter</li>
 
 <li>TableOfContents</li>
 
@@ -13244,6 +13252,15 @@ exports.context = contextWidget;
 <div created="20211109111902262" modified="20211109111902262" title="$:/state/edit/references--198875070">
 <pre>show</pre>
 </div>
+<div created="20220614112409968" modified="20220614112412808" title="$:/state/folded/Current Work">
+<pre>show</pre>
+</div>
+<div created="20220614112409966" modified="20220614112412807" title="$:/state/folded/Draft of 'New Tiddler 1'">
+<pre>show</pre>
+</div>
+<div created="20220614112409967" modified="20220614112412808" title="$:/state/folded/Hello">
+<pre>show</pre>
+</div>
 <div created="20210925105136130" modified="20210925105136130" title="$:/state/image-picker/system--293728629">
 <pre>show</pre>
 </div>
@@ -13274,16 +13291,16 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220614055647753" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220614112442350" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220614063333044" title="$:/state/toc/TableOfContents-About--118161433">
+<div created="20211209081213628" modified="20220614112827357" title="$:/state/toc/TableOfContents-About--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513071259660" modified="20220614060801654" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<div created="20220513071259660" modified="20220614112353542" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
@@ -13298,7 +13315,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220612210839434" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220614113135211" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13373,7 +13390,7 @@ exports.context = contextWidget;
 <div created="20211214093344462" modified="20220218073124706" title="$:/state/toc/TableOfContents/About-CV--118161433">
 <pre>open</pre>
 </div>
-<div created="20220613085715978" modified="20220614063332205" title="$:/state/toc/TableOfContents/About-My Cloud--118161433">
+<div created="20220613085715978" modified="20220614112826708" title="$:/state/toc/TableOfContents/About-My Cloud--118161433">
 <pre>close</pre>
 </div>
 <div created="20211214093659779" modified="20211214093659779" title="$:/state/toc/TableOfContents/About/CV-Projects by type--118161433">
@@ -13442,7 +13459,7 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220612184907560" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220614113134075" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513065839196" modified="20220610203750564" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
@@ -13553,7 +13570,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220614045044751" list="" modified="20220614063044848" title="$:/StoryList">
+<div created="20220614112443519" list="[[Reimagining Governance]] Hello [[Current Work]]" modified="20220614112852277" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15809,7 +15826,7 @@ Our approach to reading and reading groups is developing with time, but here are
 ** where you are.
 </pre>
 </div>
-<div created="20220612193657946" modified="20220614053225274" tags="Talks 2022 governance" title="Reimagining Governance">
+<div created="20220612193657946" modified="20220614113110492" tags="Talks 2022 governance" title="Reimagining Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20speakers.jpg?raw=true]]
 
 Wednesday, 15 June 2022
@@ -15824,6 +15841,14 @@ Responding to this challenge are creative practitioners who are re-imagining and
 ''Join Jack Ky Tan, Marina Norris and Arman Nouri, in a conversation chaired by [[Joon-Lynn Goh]]'' on initiatives including [[GEMBA|Global Ethnic Majorities Board Association]], a space for Black and Global Ethnic Majorities board members to collectivise and strategise; the ABCD Plan for Cultural Recovery, a city-wide cultural recovery plan devised by 100 creative workers in Brighton &amp; Hove; and the Cultural and Community Spaces at Risk Programme, a support scheme for grass-roots venues and organisations led by the Greater London Authority.
 
 Book tickets [[here|https://www.eventbrite.com/e/re-imagining-governance-tickets-337460893617]].
+
+----
+
+!!I will be talking about
+
+* [[Global Ethnic Majorities Board Association]]
+* [[RPG Longsight]]
+* [[Sample artist contract]]
 </pre>
 </div>
 <div created="20210925122053131" modified="20220513071232503" tags="[[Artistic Practice]]" title="Residencies">
@@ -16469,6 +16494,12 @@ Extracts from [[Stefano Harney]]'s youtube video:
 </div>
 <div created="20220614055944217" modified="20220614055945242" tags="Concepts" title="study">
 <pre></pre>
+</div>
+<div created="20220614112404740" modified="20220614112803550" tags="[[My Cloud]]" title="Sylvia Wynter">
+<pre>!!Learning from Sylvia Wynter
+via [[Helen Starr|http://www.themechatroniclibrary.com/about.html]]
+
+watch this space</pre>
 </div>
 <div caption="Contents" created="20210925093547619" list-after="$:/core/ui/SideBar/Open" modified="20220514073840426" tags="$:/tags/SideBar" title="TableOfContents">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
