--- a/index.html
+++ b/index.html
@@ -13570,7 +13570,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220614112443519" list="[[Reimagining Governance]] Hello [[Current Work]]" modified="20220614112852277" title="$:/StoryList">
+<div created="20220614113231212" list="Hello [[Current Work]]" modified="20220614122627814" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14674,7 +14674,7 @@ Before you start storing important information in Stroll, it is vital to make su
 See the [[control panel|$:/ControlPanel]] for more options.
 </pre>
 </div>
-<div created="20210925123949321" modified="20220612203809840" tags="[[Social Practice]] [[Organisational Change]]" title="Global Ethnic Majorities Board Association">
+<div created="20210925123949321" modified="20220614121315252" tags="[[Social Practice]] [[Organisational Change]]" title="Global Ethnic Majorities Board Association">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Jade%20Montserrat_ecclesiastes-1250x560-1.jpg?raw=true]]
 
 Out of preparations for an [[In conversation with Jade Montserrat, Amy Lawrence and Jack Tan]], the idea for a Global Ethnic Majorities Board Association (GEMBA) was born. The aim was to create a confidential and supportive meeting space where global ethnic majority trustees on UK visual arts boards could meet and share knowledge. 
@@ -14696,7 +14696,13 @@ Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFX
 *[[31 Mar 2021 GEMBA Meeting]]
 *[[13 May 2021 GEMBA Meeting]]
 *[[26 Oct 2021 GEMBA Meeting]]
-* [[6 April 2022 GEMBA Meeting]]</pre>
+* [[6 April 2022 GEMBA Meeting]]
+
+&lt;br&gt;
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/GEMBA%20jamboard1.png?raw=true]]
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/GEMBA%20jamboard2.png?raw=true]]</pre>
 </div>
 <div created="20220513114748335" modified="20220514065646215" tags="" title="Glossary">
 <pre>Commissioned by [[Industria|https://www.we-industria.org/]].
@@ -15949,7 +15955,7 @@ First half - What are trustees' current duties and liabilities?
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
 </div>
-<div created="20220610192915195" modified="20220614053146805" tags="[[Current Work]] [[Selected Work]] governance [[Organisational Change]]" title="RPG Longsight">
+<div created="20220610192915195" modified="20220614122616391" tags="[[Current Work]] [[Selected Work]] governance [[Organisational Change]]" title="RPG Longsight">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]
 
 ''June 2022 - June 2023, Longsight Arts Space, Manchester''
@@ -15975,9 +15981,11 @@ Q3 - Community Interest Company/Social Enterprise
 Q4 - Community Benefit Society/Co-op
 
 Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
-</pre>
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/RPG%20Longsight%20-%20vanessa%20scott%20talk.jpg?raw=true]]
+&lt;br&gt;^^Talk by artist Vanessa Scott as part of her exhibition //Saturated// at Longsight Art Space, 17 May 2022^^</pre>
 </div>
-<div created="20220610193943267" modified="20220610204946640" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
+<div created="20220610193943267" modified="20220614121701499" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
 
 ''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
@@ -16002,6 +16010,8 @@ Throughout the process of board meetings and AGMs, we will also be considering h
 &lt;br&gt;
 
 ------
+
+[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20photo%20of%20empty%20gallery.webp]]
 
 !!!Call for Participants to roleplay Trustees
 
