--- a/index.html
+++ b/index.html
@@ -599,6 +599,8 @@ Error message and password prompt
 
 <li>Bartlett Design and Creative Practice</li>
 
+<li>Blacksmithing Governance</li>
+
 <li>Building Ecologies, Not Hierarchies</li>
 
 <li>care</li>
@@ -13570,7 +13572,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220614113231212" list="Hello [[Current Work]]" modified="20220614122627814" title="$:/StoryList">
+<div created="20220615112253118" list="[[Devising Governance]] [[Reimagining Governance]] Hello [[Current Work]]" modified="20220615112632987" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13945,6 +13947,9 @@ Practically this means that artists are working for free. However, the violence 
 * [[Karaoke Court documents]]
 * [[Karaoke Court space]]
 </pre>
+</div>
+<div created="20220615112606980" modified="20220615112625230" tags="[[Devising Governance]]" title="Blacksmithing Governance">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Devising%20Governance%20-%20Blacksmithing%20Score.jpg?raw=true]]</pre>
 </div>
 <div created="20220601092314828" modified="20220613085430537" tags="2022 Talks [[Current Work]]" title="Building Ecologies, Not Hierarchies">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Talk%20-%20maia_building_ecologies.jpg]]
@@ -14447,7 +14452,7 @@ Kirubel’s wealth of experience and contribution in the UK entertainment indust
 
 </pre>
 </div>
-<div created="20210926055217738" modified="20220614053146803" tags="[[Organisational Change]] 2021 Artwork governance [[Current Work]]" title="Devising Governance">
+<div created="20210926055217738" modified="20220615112337470" tags="[[Organisational Change]] 2021 Artwork governance [[Current Work]]" title="Devising Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/devising%20governance%20loops.png?raw=true]]
 
 ''June 2021 - July 2022, Scottish Sculpture Workshop, Aberdeenshire''
@@ -14460,7 +14465,7 @@ The co-creating group will aim to devise one or more ‘governance performance s
 
 Participants or co-creators are recruited to represent a range of SSW's stakeholders, namely: (1) local community users; (2) artists; (3) policy stakeholders from local government or the arts sector; and (4) diverse users reflecting as much as possible a range of genders, ethnicity, disability, sexuality, age and class.
 
-Score 1: Blacksmithing Governance (Sep 2021)
+Score 1: [[Blacksmithing Governance]] (Sep 2021)
 &lt;br&gt;Score 2: Bronze Casting Governance (Jan 2022)
 &lt;br&gt;Score 3: Ceramics Governance (Apr 2022)
 
@@ -15832,7 +15837,7 @@ Our approach to reading and reading groups is developing with time, but here are
 ** where you are.
 </pre>
 </div>
-<div created="20220612193657946" modified="20220614113110492" tags="Talks 2022 governance" title="Reimagining Governance">
+<div created="20220612193657946" modified="20220615112309117" tags="Talks 2022 governance" title="Reimagining Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20speakers.jpg?raw=true]]
 
 Wednesday, 15 June 2022
@@ -15855,6 +15860,7 @@ Book tickets [[here|https://www.eventbrite.com/e/re-imagining-governance-tickets
 * [[Global Ethnic Majorities Board Association]]
 * [[RPG Longsight]]
 * [[Sample artist contract]]
+* [[Devising Governance]]
 </pre>
 </div>
 <div created="20210925122053131" modified="20220513071232503" tags="[[Artistic Practice]]" title="Residencies">
